Fix staff pictures with wrong size

--- a/branch/branch.css
+++ b/branch/branch.css
@@ -25,8 +25,19 @@
     height: 270px;
     margin: 10px auto;
 }
+.image-container {
+    width: 400px;
+    height: 270px;
+    overflow: hidden;
+}
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
 @media only screen and (max-width: 800px) {
-    .staffPicture {
+    .image-container {
         width: 90%;
         height: auto;
     }
